--- a/TornadoesInCities.Rmd
+++ b/TornadoesInCities.Rmd
@@ -157,6 +157,9 @@ library(ggiraph)
 ( P_plot <- ggplot(data = Top25.sf, 
                    mapping = aes(x = nT, y = reorder(NAME, nT), color = nT)) +
   geom_point_interactive(size = 2, mapping = aes(data_id = GEOID)) +
+  scale_color_distiller(palette = "Greens",
+                        direction = 1, 
+                        guide = FALSE) +
   scale_x_continuous(limits = c(0, NA)) +
   labs(title = "Top 25 Metropolitan Areas by Number of Significant Tornadoes",
        subtitle = "1950-2019",
@@ -169,18 +172,25 @@ girafe(ggobj = P_plot / US_map, width_svg = 10, height_svg = 6) %>%
 
 Counts grouped early and late
 ```{r}
-TorCounts.df <- Torn.sf %>%
-  st_intersection(MSA.sf) %>%
+Intersects <- CBSA.sf %>%
+  st_intersects(Torn.sf) %>%
+  unlist()
+AreaTors.sf <- Torn.sf[Intersects, ]
+
+AreaTors.sf$GEOID <- rep(CBSA.sf$GEOID, 
+                         times = rowSums(Intersects.m))
+
+TorCounts.df <- AreaTors.sf %>%
   st_drop_geometry() %>%
-  group_by(GEOID, EarlyLate) %>%
+  group_by(GEOID, Late) %>%
   summarize(nT = n()) %>%
   ungroup()
 
 ( Diff.df <- TorCounts.df %>%
-  pivot_wider(names_from = EarlyLate, 
+  pivot_wider(names_from = Late, 
               values_from = nT) %>%
-  rename(After1985 = `FALSE`,
-         Before1985 = `TRUE`) %>%
+  rename(After1985 = `TRUE`,
+         Before1985 = `FALSE`) %>%
   mutate(Difference = After1985 - Before1985,
          DiffPerc = Difference/Before1985 * 100) %>%
   drop_na() )
@@ -202,7 +212,7 @@ Downward <- Diff.df %>%
 Both <- rbind(Upward, Downward)
 
 Both <- Both %>%
-  left_join(MSA.sf,
+  left_join(CBSA.sf,
             by = "GEOID") 
 ```
 
@@ -214,77 +224,61 @@ ggplot(Both) +
   geom_segment(mapping = aes(x = .4, xend = .6, 
                              y = Before1985, yend = After1985, 
                              color = Tendency)) +
-  scale_color_brewer(palette = "Paired", guide = FALSE) +
+  scale_color_manual(values = c("#E69F00", "#CC79A7"), guide = FALSE) +
   scale_x_continuous(limits = c(0, 1)) +
   theme(panel.background = element_blank(),
         panel.grid=element_blank(),
         axis.ticks=element_blank(),
         axis.text=element_blank(),
         panel.border=element_blank()) +
-  xlab("") + ylab("") +
   geom_text(data = Both[Both$Tendency == "Upward", ],
             mapping = aes(x = .62, y = After1985, 
-                          label = paste(After1985, NAME, sep = "   ")), hjust = 0, size = 2.3) +
+                          label = paste(After1985, NAME, sep = "   ")), hjust = 0, size = 3.5, color = "#CC79A7") +
   geom_text(data = Both[Both$Tendency == "Downward", ], 
             mapping = aes(x = .38, y = Before1985, 
-                          label = paste(NAME, Before1985, sep = "   ")), hjust = 1, size = 2.3) +
+                          label = paste(NAME, Before1985, sep = "   ")), hjust = 1, size = 3.5, color = "#E69F00") +
   geom_text(data = Both[1, ], 
-            mapping = aes(label = "1950-1984", x = .38, y = 1), hjust = 1, size = 3) +
+            mapping = aes(label = "1950-1984", x = .38, y = 1), hjust = 1, size = 4) +
   geom_text(data = Both[1, ], 
-            mapping = aes(label = "1985-2018", x = .62, y = 1), hjust = 0, size = 3) +
+            mapping = aes(label = "1985-2018", x = .62, y = 1), hjust = 0, size = 4) +
   geom_segment(data = Both[1,],
-               mapping = aes(x = .45, y = 1, xend = .55, yend = 1),
+               mapping = aes(x = .45, y = 1, xend = .55, yend = 1), color = "gray70",
                arrow = arrow(angle = 20, length = unit(2, "mm"), type = "closed")) +
-  ggtitle(label = "The shifting tornado threat", 
-          subtitle = "Cities with the largest change (top 10 increases & decreases) in the number of strong (EF2+ damage) tornadoes before/after 1985")
+  labs(title = "The shifting tornado threat",
+       subtitle = "Cities with the largest change in number of significant tornadoes (EF2 or worse damage)",
+       x = "", y = "")
 ```
 
 Create a link/hover with map. https://twitter.com/kyle_e_walker/status/1397530708218892293 https://gist.github.com/walkerke/3628171efae66421c299c9f2dbee0f34
 
 ```{r}
-library(ggiraph)
-library(patchwork)
-
 Both <- Both %>%
   select(GEOID, After1985, Before1985, Difference)
 
-Both.sf <- MSA.sf %>%
+Both.sf <- CBSA.sf %>%
   right_join(Both,
             by = "GEOID") 
 
-( US_map <- ggplot(state_laea) +
-  geom_sf() +
-  geom_sf_interactive(data = Both.sf, 
-                      aes(fill = Difference > 0, data_id = GEOID)) + 
-#  scale_fill_distiller(palette = "RdBu",
-#                       direction = -1, 
-#                       guide = FALSE) + 
+( US_map <- ggplot(data = state_laea) +
+  geom_sf(fill = 'gray30') +
+  geom_sf(data = Both.sf, size = 0,
+          mapping = aes(fill = Difference > 0)) + 
   scale_fill_manual(values = c("#E69F00", "#CC79A7"),
                     guide = FALSE) +
-  theme_void() )
+  theme_dark() )
 
-( Point_plot <- ggplot(Both.sf, aes(x = Difference, y = reorder(NAME, Difference), 
-                                    fill = Difference > 0)) +
-  geom_point_interactive(size = 2.5, shape = 21,
-                         aes(data_id = GEOID)) +
-#  scale_fill_distiller(palette = "RdBu", 
-#                       direction = -1,
-#                       guide = FALSE) + 
-  scale_fill_manual(values = c("#E69F00", "#CC79A7"),
+( P_plot <- ggplot(data = Both.sf, 
+                   mapping = aes(x = Difference, y = reorder(NAME, Difference), 
+                                 color = Difference > 0)) +
+  geom_point(size = 2.5) +
+  scale_color_manual(values = c("#E69F00", "#CC79A7"),
                       guide = FALSE) +
   scale_x_continuous(limits = c(-75, 25)) +
-  labs(title = "Top Differences in Tornado Counts",
-       subtitle = "After Minus Before 1985",
-       y = "",
-       x = "") + 
-  theme_minimal() )
+  labs(title = "Top differences in significant tornado counts",
+       subtitle = "1985-2019 minus 1950-1984",
+       y = "", x = "") + 
+  theme_dark() )
 
-x <- girafe(ggobj = Point_plot / US_map, width_svg = 12, height_svg = 8) %>%
-  girafe_options(opts_hover(css = "fill:cyan;"))
-
-if(interactive()){
-  print(x)
-}
-
+P_plot / US_map
 ```
 
