Cenus data from tidycensus.

--- a/ILvsMStor.Rmd
+++ b/ILvsMStor.Rmd
@@ -77,7 +77,7 @@ Test.sf <- st_read(dsn = "1950-2019-torn-ILMS-aspath",
                    layer = "1950-2019-torn-ILMS-aspath")
 ```
 
-Note used: Can get decennial census population estimates for cities with the `us_cities()` function from the {USAboundaries} package. The geometry is point. We could create a XX km buffer around each city with more than N number of people in 1950.
+Not used: Can get decennial census population estimates for cities with the `us_cities()` function from the {USAboundaries} package. The geometry is point. We could create a XX km buffer around each city with more than N number of people in 1950.
 ```{r}
 library(USAboundaries)
 # devtools::install_github("ropensci/USAboundariesData")
