--- a/TornadoesInCities.Rmd
+++ b/TornadoesInCities.Rmd
@@ -17,6 +17,10 @@ library(tidycensus)
 Get USA boundary map from {tidycensus}.
 ```{r}
 data(state_laea)
+
+state_laea <- state_laea |>
+  st_transform(crs = 32615)
+plot(state_laea)
 ```
 
 The Core-Based Statistical Areas (CBSA) are geographic locations neighboring urban areas of 10,000+ population and/or are socioeconomically tied to the urban center by commute proximity. Prior to the year 2000, these were collectively known as MSA- Metropolitan Statistical Areas and Micropolitan Statistical Areas. An exclusive feature of GreatData CBSA Data is that the population statistics are calculated annually. Therefore, the CBSA rank is based on a more recent population than typical census data classifications.
@@ -31,7 +35,7 @@ unzip("tl_2019_us_cbsa.zip",
 }
 
 CBSA.sf <- read_sf(dsn = "tl_2019_us_cbsa", 
-                   layer = "tl_2019_us_cbsa") %>%
+                   layer = "tl_2019_us_cbsa") |>
   st_transform(crs = st_crs(state_laea))
 ```
 
@@ -44,98 +48,105 @@ unzip("1950-2019-torn-aspath.zip")
 }
 
 Torn.sf <- st_read(dsn = "1950-2019-torn-aspath", 
-                   layer = "1950-2019-torn-aspath") %>%
-  st_transform(crs = st_crs(state_laea)) %>%
-  mutate(Late = yr >= 1985) %>%
+                   layer = "1950-2019-torn-aspath") |>
+  st_transform(crs = st_crs(state_laea)) |>
+  mutate(Late = yr >= 1985) |>
   filter(mag >= 2)
 ```
 
-Create a map showing one CBSA and the intersecting tornado tracks.
+Create a map showing one CBSA and the intersecting tornado tracks. Colors from https://image-color-picker.com/hex-code-picker
 ```{r}
 NameC <- "Atlanta-Sandy Springs-Alpharetta, GA"
-Area.sf <- CBSA.sf %>%
+Area.sf <- CBSA.sf |>
   filter(NAME == NameC)
 
-State.sf <- state_laea %>%
+State.sf <- state_laea |>
   filter(GEOID == "13")
 
-Intersects <- Area.sf %>%
-  st_intersects(Torn.sf) %>%
+Intersects <- Area.sf |>
+  st_intersects(Torn.sf) |>
   unlist()
 
 AreaTors.sf <- Torn.sf[Intersects, ]
 
-nT <- AreaTors.sf %>%
-  group_by(Late) %>%
-  summarize(nT = n()) %>%
+nT <- AreaTors.sf |>
+  group_by(Late) |>
+  summarize(nT = n()) |>
   pull(nT)
 
 ggplot() +
   geom_sf(data = State.sf, fill = "white") +
   geom_sf(data = Area.sf, color = "gray70") +
-  geom_sf(data = AreaTors.sf, color = "red") +
-  labs(title = paste0("Estimated tracks of significant tornadoes across ", NameC),
-       subtitle = paste0("Total numbers: 1950-1984: ", nT[1], paste0(", 1985-2019: ", nT[2])))
+  geom_sf(data = AreaTors.sf, 
+          mapping = aes(color = Late)) +
+  scale_color_manual(values = c("#9E1FDE", "#5FDE1F"),
+                     guide = "none") +
+  labs(title = paste0("Approximate tracks of significant tornadoes\n", NameC),
+       subtitle = paste0("Total numbers: 1950-1984 (purple): ", nT[1], 
+                         paste0(", 1985-2019 (green): ", nT[2])))
 
 ```
 
 All metro areas. Also see {stars.Rmd} for creating a space-time object.
 ```{r}
-Intersects <- CBSA.sf %>%
-  st_intersects(Torn.sf) %>%
+Intersects <- CBSA.sf |>
+  st_intersects(Torn.sf) |>
   unlist()
 AreaTors.sf <- Torn.sf[Intersects, ]
 
-Intersects.m <- CBSA.sf %>%
+Intersects.m <- CBSA.sf |>
   st_intersects(Torn.sf, sparse = FALSE)
 
 TorCounts.sf <- 
   data.frame(GEOID = CBSA.sf$GEOID, 
              NAME = CBSA.sf$NAME,
              nT = rowSums(Intersects.m),
-             geometry = CBSA.sf$geometry) %>%
+             geometry = CBSA.sf$geometry) |>
   st_as_sf()
 ```
 
 ```{r}
-TorCounts.sf %>%
+TorCounts.sf |>
   arrange(desc(nT))
 
-TorCounts.sf %>%
-  slice_max(nT, n = 25) %>%
+TorCounts.sf |>
+  slice_max(nT, n = 25) |>
   ggplot(mapping = aes(y = reorder(NAME, nT), x = nT)) +
-  geom_point(size = 2, colour = "black", aes(color = )) + 
+  geom_point(size = 2, colour = "black") + 
   geom_segment(mapping = aes(yend = NAME, xend = 0), size = 1)+
-  labs(y= "", x = "") +
+  labs(y = "", x = "") +
   theme_minimal()
 ```
 
 ```{r}
 library(patchwork)
 
-Top25.sf <- TorCounts.sf %>%
+Top25.sf <- TorCounts.sf |>
   slice_max(nT, n = 25)
 
 ( US_map <- ggplot(data = state_laea) +
-  geom_sf(fill = 'gray30') +
+  geom_sf(fill = 'gray90', color = 'white', size = .15) +
   geom_sf(data = Top25.sf, size = 0,
           mapping = aes(fill = nT)) + 
-  scale_fill_distiller(palette = "Greens",
+  scale_fill_distiller(palette = "Oranges",
                        direction = 1, 
-                       guide = FALSE) + 
-  theme_dark() )
+                       guide = 'none') + 
+  theme_void() 
+)
 
 ( P_plot <- ggplot(data = Top25.sf, 
                    mapping = aes(x = nT, y = reorder(NAME, nT), color = nT)) +
   geom_point(size = 2) +
-  scale_color_distiller(palette = "Greens",
+  scale_color_distiller(palette = "Oranges",
                         direction = 1, 
-                        guide = FALSE) + 
+                        guide = 'none') + 
   scale_x_continuous(limits = c(0, NA)) +
   labs(title = "Top 25 Metropolitan Areas by Number of Significant Tornadoes",
        subtitle = "1950-2019",
        y = "", x = "") + 
-  theme_dark() )
+  theme_minimal() +
+    theme(axis.ticks = element_blank(),
+          panel.grid  = element_blank()) )
 
 P_plot / US_map
 ```
@@ -151,7 +162,7 @@ library(ggiraph)
                       mapping = aes(fill = nT, data_id = GEOID)) + 
   scale_fill_distiller(palette = "Greens",
                        direction = 1, 
-                       guide = FALSE) + 
+                       guide = 'none') + 
   theme_dark() )
 
 ( P_plot <- ggplot(data = Top25.sf, 
@@ -159,40 +170,40 @@ library(ggiraph)
   geom_point_interactive(size = 2, mapping = aes(data_id = GEOID)) +
   scale_color_distiller(palette = "Greens",
                         direction = 1, 
-                        guide = FALSE) +
+                        guide = 'none') +
   scale_x_continuous(limits = c(0, NA)) +
   labs(title = "Top 25 Metropolitan Areas by Number of Significant Tornadoes",
        subtitle = "1950-2019",
        y = "", x = "") + 
   theme_dark() )
 
-girafe(ggobj = P_plot / US_map, width_svg = 10, height_svg = 6) %>%
+girafe(ggobj = P_plot / US_map, width_svg = 10, height_svg = 6) |>
   girafe_options(opts_hover(css = "fill:cyan;"))
 ```
 
 Counts grouped early and late
 ```{r}
-Intersects <- CBSA.sf %>%
-  st_intersects(Torn.sf) %>%
+Intersects <- CBSA.sf |>
+  st_intersects(Torn.sf) |>
   unlist()
 AreaTors.sf <- Torn.sf[Intersects, ]
 
 AreaTors.sf$GEOID <- rep(CBSA.sf$GEOID, 
                          times = rowSums(Intersects.m))
 
-TorCounts.df <- AreaTors.sf %>%
-  st_drop_geometry() %>%
-  group_by(GEOID, Late) %>%
-  summarize(nT = n()) %>%
+TorCounts.df <- AreaTors.sf |>
+  st_drop_geometry() |>
+  group_by(GEOID, Late) |>
+  summarize(nT = n()) |>
   ungroup()
 
-( Diff.df <- TorCounts.df %>%
+( Diff.df <- TorCounts.df |>
   pivot_wider(names_from = Late, 
-              values_from = nT) %>%
+              values_from = nT) |>
   rename(After1985 = `TRUE`,
-         Before1985 = `FALSE`) %>%
+         Before1985 = `FALSE`) |>
   mutate(Difference = After1985 - Before1985,
-         DiffPerc = Difference/Before1985 * 100) %>%
+         DiffPerc = Difference/Before1985 * 100) |>
   drop_na() )
 
 sum(Diff.df$Difference > 0)
@@ -201,17 +212,17 @@ sum(Diff.df$Difference < 0)
 
 Top 10 and bottom 10 combined.
 ```{r}
-Upward <- Diff.df %>%
-  slice_max(Difference, n = 10) %>%
+Upward <- Diff.df |>
+  slice_max(Difference, n = 10) |>
   mutate(Tendency = "Upward")
 
-Downward <- Diff.df %>%
-  slice_min(Difference, n = 10) %>%
+Downward <- Diff.df |>
+  slice_min(Difference, n = 10) |>
   mutate(Tendency = "Downward")
 
 Both <- rbind(Upward, Downward)
 
-Both <- Both %>%
+Both <- Both |>
   left_join(CBSA.sf,
             by = "GEOID") 
 ```
@@ -224,7 +235,7 @@ ggplot(Both) +
   geom_segment(mapping = aes(x = .4, xend = .6, 
                              y = Before1985, yend = After1985, 
                              color = Tendency)) +
-  scale_color_manual(values = c("#E69F00", "#CC79A7"), guide = FALSE) +
+  scale_color_manual(values = c("#E69F00", "#CC79A7"), guide = 'none') +
   scale_x_continuous(limits = c(0, 1)) +
   theme(panel.background = element_blank(),
         panel.grid=element_blank(),
@@ -252,10 +263,10 @@ ggplot(Both) +
 Create a link/hover with map. https://twitter.com/kyle_e_walker/status/1397530708218892293 https://gist.github.com/walkerke/3628171efae66421c299c9f2dbee0f34
 
 ```{r}
-Both <- Both %>%
+Both <- Both |>
   select(GEOID, After1985, Before1985, Difference)
 
-Both.sf <- CBSA.sf %>%
+Both.sf <- CBSA.sf |>
   right_join(Both,
             by = "GEOID") 
 
@@ -264,7 +275,7 @@ Both.sf <- CBSA.sf %>%
   geom_sf(data = Both.sf, size = 0,
           mapping = aes(fill = Difference > 0)) + 
   scale_fill_manual(values = c("#E69F00", "#CC79A7"),
-                    guide = FALSE) +
+                    guide = 'none') +
   theme_dark() )
 
 ( P_plot <- ggplot(data = Both.sf, 
@@ -273,7 +284,7 @@ Both.sf <- CBSA.sf %>%
   geom_point(size = 2.5) +
   geom_vline(xintercept = 0, color = "white") +
   scale_color_manual(values = c("#E69F00", "#CC79A7"),
-                      guide = FALSE) +
+                      guide = 'none') +
   scale_x_continuous(limits = c(-75, 25)) +
   labs(title = "Top differences in significant tornado counts",
        subtitle = "1985-2019 minus 1950-1984",
